@@ -22,6 +22,7 @@ https://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 
 Changes from version 4.0.1 to version 4.0.2:
 - Corrected minimal GMP version in the INSTALL file and the MPFR manual.
+- Shared caches: cleanup; really detect lock failures (abort in this case).
 - Improved MPFR manual. In particular, corrected/completed the
   mpfr_get_str description in order to follow the historical behavior
   and GMP's mpf_get_str function.
